<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.users.edit.EditProfileRefugee">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/change_photo_refugee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_photo"/>

                <ImageView
                    android:id="@+id/refugee_photo"
                    android:layout_width="@dimen/dim100"
                    android:layout_height="@dimen/dim100"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/dim10"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_tipo_usuario"
                    style="@style/text_view"
                    android:layout_marginStart="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:text="@string/tipo_usuario"
                />

                <TextView
                    android:id="@+id/titulo_registro_refugiado"
                    style="@style/text_view"
                    android:layout_marginStart="@dimen/dim10"
                    android:layout_marginTop="@dimen/dim10"
                    android:text="@string/refugee"
                />

            </LinearLayout>


            <TextView
                android:id="@+id/subtitulo_registro_refugiado"
                style="@style/text_view"
                android:layout_marginStart="@dimen/dim20"
                android:layout_marginTop="@dimen/dim20"
                android:text="@string/subtitulo_formulario"
            />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/nombre_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_nombre_formulario"
                    android:inputType="textCapWords"
                />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_marginRight="@dimen/dim20"
                android:layout_marginTop="8dp"
                android:text="@string/texto_email_formulario"
            />

            <TextView
                android:id="@+id/email_usuario_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_marginRight="@dimen/dim20"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
            />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/apellido1_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_1apellido_formulario"
                    android:inputType="textCapWords"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/apellido2_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_2apellido_formulario"
                    android:inputType="textCapWords"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/telefono_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_numero_telefono"
                    android:inputType="phone"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/naciminento_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/texto_nacimiento_refugiado"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/texto_sexo_refugiado"
                style="@style/text_view"
                android:layout_marginStart="@dimen/dim20"
                android:layout_marginTop="@dimen/dim20"
                android:text="@string/texto_sexo_refugiado"/>

            <Spinner
                android:id="@+id/sexo_usuario_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_marginRight="@dimen/dim20"
                android:layout_marginTop="@dimen/dim10"
                android:background="@color/colorPrimaryDarker"
                android:popupBackground="@color/colorPrimaryDarker"
            />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/pais_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_procedencia_refugiado"
                    android:inputType="textCapWords"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/pueblo_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_pueblo_refugiado"
                    android:inputType="textCapWords"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/etnia_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_etnia_refugiado"
                    android:inputType="textCapWords"
                />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/texto_grupo_sanguineo_refugiado"
                style="@style/text_view"
                android:layout_marginStart="@dimen/dim20"
                android:layout_marginTop="@dimen/dim20"
                android:text="@string/texto_grupo_sanguineo_refugiado"
            />

            <Spinner
                android:id="@+id/sangre_usuario_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_marginRight="@dimen/dim20"
                android:layout_marginTop="@dimen/dim10"
                android:background="@color/colorPrimaryDarker"
                android:popupBackground="@color/colorPrimaryDarker"
            />

            <TextView
                android:id="@+id/texto_ojos_refugiado"
                style="@style/text_view"
                android:layout_marginStart="@dimen/dim20"
                android:layout_marginTop="@dimen/dim20"
                android:text="@string/texto_ojos_refugiado"
            />

            <Spinner
                android:id="@+id/ojos_usuario_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim20"
                android:layout_marginRight="@dimen/dim20"
                android:layout_marginTop="@dimen/dim10"
                android:background="@color/colorPrimaryDarker"
                android:popupBackground="@color/colorPrimaryDarker"
            />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/biografia_usuario_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_biografia_refugiado"
                    android:inputType="textCapWords"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cambiar_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim20"
                android:layout_marginTop="@dimen/dim20"
                android:text="@string/cambiar_password"
            />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/guardar_editar_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dim20"
                android:layout_marginTop="@dimen/dim20"
                android:text="@string/guardar"
            />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>